--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,18 +8,12 @@ trigger:
 
 pool:
   vmImage: 'ubuntu-latest'
-strategy:
-  matrix:
-    Python36:
-      python.version: '3.6'
-    Python37:
-      python.version: '3.7'
 
 steps:
 - task: UsePythonVersion@0
   inputs:
-    versionSpec: '$(python.version)'
-  displayName: 'Use Python $(python.version)'
+    versionSpec: '3.7'
+  displayName: 'Use Python 3.7'
 
 - script: |
     python -m pip install --upgrade pip
@@ -28,5 +22,13 @@ steps:
 
 - script: |
     pip install pytest-azurepipelines
-    pytest --cov=src tests/
+    pytest --junitxml=junit/test-results.xml --cov-report=xml --cov=src tests/
   displayName: 'pytest'
+
+- task: PublishTestResults@2
+  condition: succeededOrFailed()
+  inputs:
+    failTaskOnFailedTests: true
+    testResultsFiles: 'junit/test-results.xml'
+    testRunTitle: 'pytest-coverage'
+  displayName: 'Publish test results'
