--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,19 +9,32 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
+variables:
+    PIP_CACHE_DIR: $(Pipeline.Workspace)/.pip
+
 steps:
 - task: UsePythonVersion@0
   inputs:
     versionSpec: '3.7'
   displayName: 'Use Python 3.7'
 
+steps:
+- task: Cache@2
+  inputs:
+    key: 'python | "$(Agent.OS)" | requirements.txt'
+    restoreKeys: | 
+      python | "$(Agent.OS)"
+      python
+    path: $(PIP_CACHE_DIR)
+  displayName: 'Cache pip packages'
+
 - script: |
     python -m pip install --upgrade pip
+    pip install pytest-azurepipelines
     pip install -r requirements.txt
   displayName: 'Install dependencies'
 
 - script: |
-    pip install pytest-azurepipelines
     pytest --junitxml=junit/test-results.xml --cov-report=xml --cov=src tests/
   displayName: 'pytest'
 
