Feature/implement caching (#2)
* add caching step for pip install

* fix multiple steps error

* run az pipes on pr to master

Co-authored-by: mathurk1 <karthik@email.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,8 +6,14 @@
 trigger:
 - master
 
+pr:
+- master
+
 pool:
   vmImage: 'ubuntu-latest'
+
+variables:
+    PIP_CACHE_DIR: $(Pipeline.Workspace)/.pip
 
 steps:
 - task: UsePythonVersion@0
@@ -15,13 +21,22 @@ steps:
     versionSpec: '3.7'
   displayName: 'Use Python 3.7'
 
+- task: Cache@2
+  inputs:
+    key: 'python | "$(Agent.OS)" | requirements.txt'
+    restoreKeys: | 
+      python | "$(Agent.OS)"
+      python
+    path: $(PIP_CACHE_DIR)
+  displayName: 'Cache pip packages'
+
 - script: |
     python -m pip install --upgrade pip
+    pip install pytest-azurepipelines
     pip install -r requirements.txt
   displayName: 'Install dependencies'
 
 - script: |
-    pip install pytest-azurepipelines
     pytest --junitxml=junit/test-results.xml --cov-report=xml --cov=src tests/
   displayName: 'pytest'
 
