--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,7 @@ name: CI
 on:
   push:
     branches: 
-      - master
-  pull_request:
-    branches:
-      - master
+      - feature/blackcheck
 
 jobs:
   checks:
