--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,15 +9,19 @@ jobs:
   checks:
     name: checks
     runs-on: ubuntu-latest
-    steps:
 
+    steps:
     - name: Checkout
       uses: actions/checkout@v1
     
     - name: check code format
+    - uses: actions/setup-python@v2
+      with: 
+        python-version: '3.7'
+        architecture: 'x64'
       run: | 
-        python3 -m pip install --upgrade pip
-        pip3 install black
+        python -m pip install --upgrade pip
+        pip install black
         sh scripts/check-format.sh 81 .
       if: always()
 
