--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,16 +6,16 @@ on:
       - feature/blackcheck
 
 jobs:
-  checks:
-    name: checks
+  check-code-format:
+    name: check-code-format
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
     
     - name: check code format
-    - uses: actions/setup-python@v2
+      uses: actions/setup-python@v2
       with: 
         python-version: '3.7'
         architecture: 'x64'
