--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,13 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     
-    - name: check code format
+    - name: Setup python
       uses: actions/setup-python@v2
       with: 
         python-version: '3.7'
         architecture: 'x64'
+
+    - name: Check code format
       run: | 
         python -m pip install --upgrade pip
         pip install black
