run actions on push/pr to master

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,10 @@ name: CI
 on:
   push:
     branches: 
-      - feature/blackcheck
+      - master
+  pr:
+    branches:
+      - master
 
 jobs:
   check-code-format:
